Fix background not covering website

--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@ html {
     line-height: 1.8em;
     text-align: center;
     background: linear-gradient(0deg, rgba(153,67,88,1) 0%, rgba(21,6,19,1) 100%);
+    min-height: 100vh;
 }
 
 body {
